--- a/index.html
+++ b/index.html
@@ -50,28 +50,29 @@
   <script>
     // Replace or add more entries as needed
     const pdfs = [
-  { title: "bhoi", file: "pdfs/bhoi.pdf" },
-  { title: "barik", file: "pdfs/barik.pdf" },
-  { title: "behera", file: "pdfs/behera.pdf" },
-  { title: "suman", file: "pdfs/suman.pdf" },
-  { title: "guduli", file: "pdfs/guduli.pdf" },
-  { title: "panda", file: "pdfs/panda.pdf" },
-  { title: "madan", file: "pdfs/madan.pdf" },
-  { title: "premananda", file: "pdfs/premananda.pdf" },
-  { title: "laxmidhar", file: "pdfs/laxmidhar.pdf" },
-  { title: "AR", file: "pdfs/AR.pdf" },
-  { title: "anil", file: "pdfs/anil.pdf" },
-  { title: "amita", file: "pdfs/amita.pdf" },
-  { title: "anubha", file: "pdfs/anubha.pdf" },
-  { title: "maa_annapurna", file: "pdfs/maa_annapurna.pdf" },
-  { title: "pradeep", file: "pdfs/pradeep.pdf" },
-  { title: "Kumar", file: "pdfs/Kumar.pdf" },
-  { title: "saroj", file: "pdfs/saroj.pdf" },
-  { title: "dillip", file: "pdfs/dillip.pdf" },
-  { title: "kuna", file: "pdfs/kuna.pdf" },
-  { title: "das_suppliers", file: "pdfs/das_suppliers.pdf" },
-  { title: "dreams_N_destinations", file: "pdfs/dreams_N_destinations.pdf" }
+  { title: "bhoi", file: "bhoi.pdf" },
+  { title: "barik", file: "barik.pdf" },
+  { title: "behera", file: "behera.pdf" },
+  { title: "suman", file: "suman.pdf" },
+  { title: "guduli", file: "guduli.pdf" },
+  { title: "panda", file: "panda.pdf" },
+  { title: "madan", file: "madan.pdf" },
+  { title: "premananda", file: "premananda.pdf" },
+  { title: "laxmidhar", file: "laxmidhar.pdf" },
+  { title: "AR", file: "AR.pdf" },
+  { title: "anil", file: "anil.pdf" },
+  { title: "amita", file: "amita.pdf" },
+  { title: "anubha", file: "anubha.pdf" },
+  { title: "maa_annapurna", file: "maa_annapurna.pdf" },
+  { title: "pradeep", file: "pradeep.pdf" },
+  { title: "Kumar", file: "Kumar.pdf" },
+  { title: "saroj", file: "saroj.pdf" },
+  { title: "dillip", file: "dillip.pdf" },
+  { title: "kuna", file: "kuna.pdf" },
+  { title: "das_suppliers", file: "das_suppliers.pdf" },
+  { title: "dreams_N_destinations", file: "dreams_N_destinations.pdf" }
 ];
+
 ;
 
     const listElement = document.getElementById("pdfList");
